--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
     "framer-motion": "^10.16.1",
-    "next": "13.4.15",
+    "next": "^13.5.6",
     "nodemailer": "^6.9.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
